3.0.0:
 * Added support for loading HDR AVIF images